--- a/DifferenceChecker/packages.config
+++ b/DifferenceChecker/packages.config
@@ -2,4 +2,7 @@
 <packages>
   <package id="DiffPlex" version="1.5.0" targetFramework="net45" />
   <package id="ExtendedRichTextBox" version="1.1.0" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net461" />
+  <package id="Octokit" version="0.43.0" targetFramework="net461" />
+  <package id="RestEase" version="1.4.10" targetFramework="net45" />
 </packages>
